added bypassing extension

--- a/front/main.html
+++ b/front/main.html
@@ -149,8 +149,8 @@
             main();
         });
 
-        let textarea = document.querySelector('.datas > textarea');
-        let input = document.querySelector('.datas > input');
+        let textarea = document.getElementById('cookies');
+        let input = document.getElementById('user_agent')
         let checkoutInput = document.getElementById('checkout')
         let proxyInput = document.getElementById('proxy')
 
